<resources>
    <string name="app_name">Inventory Wizard</string>
    <!-- strings for the empty view -->
    <string name="empty_view_title">Your Inventory is empty...</string>
    <string name="empty_view_subtitle">add some by touching the plus button</string>

    <!--sell button text-->
    <string name="sell_button_text">SELL</string>

    <!--hints for edit text fields-->
    <string name="name_hint">Name</string>
    <string name="price_hint">price</string>
    <string name="quantity_hint">quantity</string>
    <string name="email_hint">Supplier\'s email</string>
    <string name="supplier_name_hint">Supplier\'s Name</string>
    <string name="supplier">Supplier</string>

    <!--buttons-->
    <string name="pick_image">Pick Image</string>
    <string name="receive_shipment">Receive shipment</string>
    <string name="order_more">Order More</string>

    <!-- details activity mode-->
    <string name="edit_item_title">Edit Item</string>
    <string name="add_item_title">Add Item</string>
    <!-- dialog -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <!-- sell dialog-->
    <string name="not_enough_items_alert">Not eough items available</string>
    <string name="succesful_sell">Sold</string>
    <!--receive shipment dialog-->
    <string name="items_received">Items received</string>
    <string name="something_went_wrong">ups Something went wrong :(</string>

    <string name="how_many">How many?</string>

    <!-- order email-->
    <string name="dear">Dear</string>
    <string name="body_pre">I am glad to tell you we are doing well with your product, that is why I would like to Order</string>
    <string name="body_post">units more.\n I will like to discuss if you have time shipment details.\n I look forward to hearing from you\n</string>
    <string name="subject">Order</string>
    
    <!-- menu -->
    <string name="action_save">save</string>
    <string name="action_delete">delete</string>

    <!--saving and deleting-->
    <string name="item_saved">Item saved</string>
    <string name="error_inserting_new_item">error inserting new item</string>
    <string name="error_editing_item">Error editing item</string>
    <string name="item_succesfuly_edited">Item updated</string>
    <string name="delete_dialog">Are you sure?</string>
    <string name="delete">DELETE</string>
    <string name="cancel">Cancel</string>
    <string name="successfuly_deleted">Item deleted</string>
    <string name="no_supplier">No supplier\'s name</string>
    <string name="no_email">No supplier\'s email</string>
    <string name="name_needed">Name is required</string>
    <string name="action_delete_all">Delete All Items</string>

    <string name="unsaved_changes_dialog_msg">Are you sure you don\'t want to save your work?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
</resources>
